# stridesense

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2d5b7184ce46_add_inferred_run_type_source.py  3f9c2d8e1a47_enable_pgvector_add_run_embedding.py  6da416944656_add_insights_table.py  8410a8c62705_initial_schema.py  8d55e89b65e0_add_run_weather_samples_and_.py  b7d1a4f20c93_add_ask_demo_answers_table.py  bb8879b5ac53_add_glucose_schema_and_source_values.py  c4e8f1a92b60_add_daily_briefs_table.py  d46b919b5f1f_add_open_meteo_data_source.py  f96e8b0bf478_add_home_location_to_users.py
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  ask.py  daily_brief.py  deps.py  integrations.py  runs.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  ask_demo.py  daily_brief.py  enums.py  glucose.py  import_job.py  insight.py  oauth.py  recovery.py  run.py  user.py  weather.py
backend/app/schemas/: __init__.py  analytics.py  integrations.py  run.py
backend/app/services/: __init__.py  apple_health.py  ask.py  cities.py  daily_brief.py  features.py  glucose.py  ingest.py  insights.py  oura.py  records.py  runs.py  similarity.py  training_load.py  weather.py
backend/scripts/: assign_city_coords.py  classify_runs.py  dedupe_source_twins.py  embed_runs.py  export_demo_block.py  pregenerate_ask_answers.py  pregenerate_insights.py  seed.py  seed_demo.py
backend/scripts/fixtures/: demo_block.json
backend/tests/: conftest.py  test_analytics.py  test_apple_health.py  test_ask.py  test_cities.py  test_classify_runs.py  test_daily_brief.py  test_demo_block.py  test_demo_mode.py  test_integrations.py  test_oura.py  test_runs.py  test_similar_compare.py  test_trend_blocks.py  test_weather.py
docs/: stridesense_phase3_setup.md
frontend/: package-lock.json  package.json
(+40 files in other folders)
