[project]
name = "stridesense-backend"
version = "0.0.1"
description = "StrideSense API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "redis>=5.2",
    "httpx>=0.28",
    "anthropic>=0.112.0",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.6.0",
    "pgvector>=0.3.6",
    "sentence-transformers>=5.6.0",
    "pgvector>=0.3.6",
    "torch>=2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "httpx>=0.28",
    "respx>=0.23.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
